# cnitch

./: README.md  bin_switcher.sh  build.sh  compose.yaml
client/: Cargo.toml  Dockerfile  build_client.sh
client/src/: main.rs
server/: Cargo.toml  arm64.Dockerfile  x86.Dockerfile
server/src/: main.rs
